--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_link_preview.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_link_preview.xml
@@ -11,7 +11,7 @@
     tools:visibility="visible">
 
     <View
-        android:id="@id/viewTop"
+        android:id="@+id/viewTop"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginBottom="10dp"
