--- a/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
@@ -29,9 +29,8 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/sceyt_item_input_image_attachment" />
 
-    <androidx.fragment.app.FragmentContainerView
+    <FrameLayout
         android:id="@+id/layoutReplyOrEditMessage"
-        android:name="com.sceyt.chatuikit.presentation.uicomponents.messageinput.fragments.EditOrReplyMessageFragment"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:visibility="gone"
@@ -40,9 +39,8 @@
         app:layout_constraintTop_toBottomOf="@+id/rvAttachments"
         app:layout_goneMarginTop="0dp" />
 
-    <androidx.fragment.app.FragmentContainerView
+    <FrameLayout
         android:id="@+id/layoutLinkPreview"
-        android:name="com.sceyt.chatuikit.presentation.uicomponents.messageinput.fragments.LinkPreviewFragment"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/sceyt_color_primary"
@@ -108,10 +106,9 @@
             android:layout_marginEnd="10dp"
             android:background="@drawable/sceyt_bg_circle"
             android:padding="7dp"
-            android:tint="@color/sceyt_color_on_primary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/sceyt_ic_voice" />
+            app:srcCompat="@drawable/sceyt_ic_voice_white" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -122,7 +119,7 @@
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/viewTop"
+        app:layout_constraintTop_toBottomOf="@+id/viewAttachments"
         app:layout_constraintVertical_bias="1" />
 
     <androidx.appcompat.widget.AppCompatButton
@@ -142,7 +139,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/viewTop"
+        app:layout_constraintTop_toBottomOf="@id/viewAttachments"
         tools:ignore="UnusedAttribute" />
 
     <androidx.appcompat.widget.AppCompatTextView
