--- a/SceytChatUiKit/src/main/res/layout/sceyt_search_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_search_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rootLayout"
@@ -8,7 +8,8 @@
     android:background="@drawable/sceyt_bg_corners_10"
     android:backgroundTint="@color/sceyt_color_surface_1"
     android:focusable="true"
-    android:focusableInTouchMode="true">
+    android:focusableInTouchMode="true"
+    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/icSearch"
@@ -57,4 +58,4 @@
         app:srcCompat="@drawable/sceyt_ic_cancel"
         tools:visibility="visible" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</merge>
