--- a/SceytChatUiKit/src/main/res/layout/sceyt_custom_toolbar.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_custom_toolbar.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layoutToolbar"
     android:layout_width="match_parent"
-    android:layout_height="?android:attr/actionBarSize">
+    android:layout_height="wrap_content"
+    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/icBack"
@@ -22,10 +22,11 @@
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvTitle"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="?android:attr/actionBarSize"
         android:layout_marginStart="15dp"
         android:ellipsize="end"
         android:fontFamily="@font/roboto_medium"
+        android:gravity="center_vertical|start"
         android:padding="10dp"
         android:singleLine="true"
         android:textAlignment="viewStart"
@@ -53,6 +54,6 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/sceyt_color_border"
-        app:layout_constraintBottom_toBottomOf="@+id/layoutToolbar" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</merge>
