--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_channels.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_channels.xml
@@ -50,9 +50,9 @@
                 android:id="@+id/searchView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingHorizontal="10dp"
-                android:paddingTop="10dp"
-                android:paddingBottom="8dp"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="8dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_scrollFlags="scroll|enterAlways|snap" />
 
