--- a/SceytChatUiKit/src/main/res/layout/sceyt_layout_searchable_toolbar.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_layout_searchable_toolbar.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="?android:attr/actionBarSize">
+    android:layout_height="wrap_content"
+    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/icBack"
@@ -21,10 +22,11 @@
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvTitle"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="?android:attr/actionBarSize"
         android:layout_marginHorizontal="15dp"
         android:animateLayoutChanges="true"
         android:fontFamily="@font/roboto_medium"
+        android:gravity="center_vertical"
         android:padding="10dp"
         android:singleLine="true"
         android:textColor="@color/sceyt_color_text_primary"
@@ -41,7 +43,7 @@
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/input"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="?android:attr/actionBarSize"
         android:layout_marginStart="15dp"
         android:animateLayoutChanges="true"
         android:background="@null"
@@ -93,4 +95,4 @@
         android:background="@color/sceyt_color_border"
         app:layout_constraintBottom_toBottomOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</merge>
