--- a/SceytChatUiKit/src/main/res/layout/sceyt_recorded_voice_presenter.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_recorded_voice_presenter.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="bottom"
-    android:background="@color/sceyt_color_background"
-    android:clickable="true"
-    android:focusable="true"
-    android:paddingBottom="7dp">
+    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/delete_voice_record"
@@ -95,4 +91,4 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/sceyt_ic_send_message" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</merge>
