--- a/SceytChatUiKit/src/main/res/layout/sceyt_video_controller_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_video_controller_view.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    tools:parentTag="android.widget.FrameLayout">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/imageThumb"
@@ -22,4 +23,4 @@
         android:padding="10dp"
         app:srcCompat="@drawable/sceyt_ic_play" />
 
-</FrameLayout>
+</merge>
