Fix issue to show reply messages file icon. Version "1.7.7-SNAPSHOT"

--- a/SceytChatUiKit/src/main/res/layout/sceyt_recycler_reply_container.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_recycler_reply_container.xml
@@ -34,6 +34,27 @@
         tools:src="@tools:sample/backgrounds/scenic"
         tools:visibility="visible" />
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/icFile"
+        android:layout_width="34dp"
+        android:layout_height="34dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="6dp"
+        android:background="@drawable/sceyt_bg_circle"
+        android:padding="10dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/view"
+        app:layout_constraintTop_toTopOf="@+id/view"
+        app:srcCompat="@drawable/sceyt_ic_file_filled" />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrier"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="end"
+        app:constraint_referenced_ids="imageAttachment,icFile" />
+
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvName"
         android:layout_width="wrap_content"
@@ -49,7 +70,7 @@
         app:layout_constrainedWidth="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
-        app:layout_constraintStart_toEndOf="@+id/imageAttachment"
+        app:layout_constraintStart_toEndOf="@+id/barrier"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed"
         tools:text="Henry Willian" />
@@ -64,7 +85,7 @@
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/tvMessageBody"
         app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toEndOf="@+id/imageAttachment"
+        app:layout_constraintStart_toEndOf="@+id/barrier"
         app:layout_constraintTop_toTopOf="@+id/tvMessageBody"
         tools:src="@drawable/sceyt_ic_voice"
         tools:visibility="visible" />
