--- a/SceytChatUiKit/src/main/res/layout/sceyt_activity_share.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_activity_share.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/sceyt_color_background"
     tools:context="com.sceyt.chatuikit.presentation.uicomponents.share.SceytShareActivity">
 
     <com.sceyt.chatuikit.presentation.customviews.SceytSearchableToolbar
