Moved formatters to SceytChatUIKitFormatters. Fix namings in sceyt_attrs from sceyt.. to sceytUi...

--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_create_channel_details.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_create_channel_details.xml
@@ -31,8 +31,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:sceytAvatarColor="@color/sceyt_color_overlay_background_2"
-                app:sceytAvatarDefaultIcon="@drawable/sceyt_ic_camera_72" />
+                app:sceytUiAvatarColor="@color/sceyt_color_overlay_background_2"
+                app:sceytUiAvatarDefaultIcon="@drawable/sceyt_ic_camera_72" />
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/inputSubject"
