--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_user.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_user.xml
@@ -16,11 +16,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:sceytAvatarColor="@color/colorAccent"
-        app:sceytAvatarDefaultIcon="@drawable/sceyt_ic_default_avatar"
-        app:sceytAvatarEnableRipple="false"
-        app:sceytAvatarViewFullName="Art d"
-        app:sceytAvatarViewTextSize="15sp" />
+        app:sceytUiAvatarColor="@color/colorAccent"
+        app:sceytUiAvatarDefaultIcon="@drawable/sceyt_ic_default_avatar"
+        app:sceytUiAvatarEnableRipple="false"
+        app:sceytUiAvatarViewFullName="Art d"
+        app:sceytUiAvatarViewTextSize="15sp" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/userName"
