--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_member.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_member.xml
@@ -16,8 +16,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:sceytUiAvatarEnableRipple="false"
-        app:sceytUiAvatarViewFullName="Art d"
-        app:sceytUiAvatarViewTextSize="15sp" />
+        app:sceytUiAvatarFullName="Art d"
+        app:sceytUiAvatarTextSize="15sp" />
 
     <com.sceyt.chatuikit.presentation.customviews.SceytOnlineView
         android:id="@+id/onlineStatus"
