--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_user.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_user.xml
@@ -19,8 +19,8 @@
         app:sceytUiAvatarColor="@color/colorAccent"
         app:sceytUiAvatarDefaultIcon="@drawable/sceyt_ic_default_avatar"
         app:sceytUiAvatarEnableRipple="false"
-        app:sceytUiAvatarViewFullName="Art d"
-        app:sceytUiAvatarViewTextSize="15sp" />
+        app:sceytUiAvatarFullName="Art d"
+        app:sceytUiAvatarTextSize="15sp" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/userName"
