--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_user_marker.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_user_marker.xml
@@ -17,8 +17,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:sceytUiAvatarDefaultIcon="@drawable/sceyt_ic_default_avatar"
         app:sceytUiAvatarEnableRipple="false"
-        app:sceytUiAvatarViewFullName="Art d"
-        app:sceytUiAvatarViewTextSize="15sp" />
+        app:sceytUiAvatarFullName="Art d"
+        app:sceytUiAvatarTextSize="15sp" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/userName"
