--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_members.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_members.xml
@@ -16,8 +16,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:sceytUiAvatarEnableRipple="false"
-        app:sceytUiAvatarViewFullName="Art d"
-        app:sceytUiAvatarViewTextSize="15sp" />
+        app:sceytUiAvatarFullName="Art d"
+        app:sceytUiAvatarTextSize="15sp" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/userName"
