--- a/SceytChatUiKit/src/main/res/layout/sceyt_activity_create_group.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_activity_create_group.xml
@@ -7,14 +7,14 @@
     android:background="@color/sceyt_color_background"
     tools:context=".presentation.uicomponents.createchat.newgroup.SceytCreateGroupActivity">
 
-    <com.sceyt.chatuikit.presentation.customviews.SceytCustomToolbar
+    <com.sceyt.chatuikit.presentation.customviews.SceytToolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/sceyt_color_primary"
         app:layout_constraintTop_toTopOf="parent"
-        app:title="@string/sceyt_new_group"
-        app:titleTextColor="@color/sceyt_color_text_primary" />
+        app:sceytUiToolbarTitle="@string/sceyt_new_group"
+        app:sceytUiToolbarTitleTextColor="@color/sceyt_color_text_primary" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
