--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_photo_preview.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_photo_preview.xml
@@ -7,13 +7,13 @@
     android:fitsSystemWindows="true"
     tools:context=".presentation.uicomponents.conversationinfo.photopreview.SceytPhotoPreviewActivity">
 
-    <com.sceyt.chatuikit.presentation.customviews.SceytCustomToolbar
+    <com.sceyt.chatuikit.presentation.customviews.SceytToolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/sceyt_color_primary"
         app:layout_constraintTop_toTopOf="parent"
-        app:titleTextColor="@color/sceyt_color_text_primary" />
+        app:sceytUiToolbarTitleTextColor="@color/sceyt_color_text_primary" />
 
     <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/imageView"
