--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_voice_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_voice_message.xml
@@ -129,14 +129,14 @@
             android:layout_height="0dp"
             android:padding="1dp"
             android:visibility="gone"
-            app:iconSizeInPercent="65"
+            app:sceytUiProgressIconSizeInPercent="65"
             app:layout_constraintBottom_toBottomOf="@+id/playPauseButton"
             app:layout_constraintEnd_toEndOf="@+id/playPauseButton"
             app:layout_constraintStart_toStartOf="@+id/playPauseButton"
             app:layout_constraintTop_toTopOf="@+id/playPauseButton"
-            app:minProgress="2"
-            app:progressColor="@color/sceyt_color_on_primary"
-            app:trackColor="@android:color/transparent"
+            app:sceytUiProgressMinProgress="2"
+            app:sceytUiProgressColor="@color/sceyt_color_on_primary"
+            app:sceytUiProgressTrackColor="@android:color/transparent"
             tools:visibility="visible" />
 
         <com.masoudss.lib.WaveformSeekBar
