--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_voice.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_voice.xml
@@ -69,15 +69,15 @@
         android:layout_height="35dp"
         android:padding="1dp"
         android:visibility="gone"
-        app:iconSizeInPercent="65"
-        app:iconTint="@color/sceyt_color_accent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:minProgress="2"
-        app:progressColor="@color/sceyt_color_accent"
-        app:trackColor="@android:color/transparent"
-        app:trackThickness="2.5dp"
+        app:sceytUiProgressColor="@color/sceyt_color_accent"
+        app:sceytUiProgressIconSizeInPercent="65"
+        app:sceytUiProgressIconTint="@color/sceyt_color_accent"
+        app:sceytUiProgressMinProgress="2"
+        app:sceytUiProgressTrackColor="@android:color/transparent"
+        app:sceytUiProgressTrackThickness="2.5dp"
         tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
