--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_video_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_video_message.xml
@@ -184,15 +184,15 @@
             android:layout_height="@dimen/messageProgressSize"
             android:padding="1dp"
             android:visibility="gone"
-            app:backgroundColor="@color/sceyt_progress_bg_color"
-            app:iconSizeInPercent="65"
+            app:sceytUiProgressBackgroundColor="@color/sceyt_progress_bg_color"
+            app:sceytUiProgressIconSizeInPercent="65"
             app:layout_constraintBottom_toBottomOf="@id/imageThumb"
             app:layout_constraintEnd_toEndOf="@id/imageThumb"
             app:layout_constraintStart_toStartOf="@id/imageThumb"
             app:layout_constraintTop_toTopOf="@id/imageThumb"
-            app:minProgress="2"
-            app:progressColor="@color/sceyt_color_on_primary"
-            app:trackColor="@android:color/transparent"
+            app:sceytUiProgressMinProgress="2"
+            app:sceytUiProgressColor="@color/sceyt_color_on_primary"
+            app:sceytUiProgressTrackColor="@android:color/transparent"
             tools:visibility="visible" />
 
         <androidx.appcompat.widget.AppCompatTextView
