--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs.xml
@@ -67,28 +67,28 @@
     </declare-styleable>
 
     <declare-styleable name="SceytCircularProgressView">
-        <attr name="progressColor" format="color" />
-        <attr name="trackColor" format="color" />
-        <attr name="progress" format="float" />
-        <attr name="minProgress" format="float" />
-        <attr name="roundedProgress" format="boolean" />
-        <attr name="trackThickness" format="dimension" />
-        <attr name="centerIcon" format="reference" />
-        <attr name="iconTint" format="color" />
-        <attr name="rotateAnimEnabled" format="boolean" />
-        <attr name="backgroundColor" format="color" />
-        <attr name="iconSizeInPercent" format="float" />
-        <attr name="enableProgressDownAnimation" format="boolean" />
+        <attr name="sceytUiProgressColor" format="color" />
+        <attr name="sceytUiProgressTrackColor" format="color" />
+        <attr name="sceytUiProgressValue" format="float" />
+        <attr name="sceytUiProgressMinProgress" format="float" />
+        <attr name="sceytUiProgressRoundedProgress" format="boolean" />
+        <attr name="sceytUiProgressTrackThickness" format="dimension" />
+        <attr name="sceytUiProgressCenterIcon" format="reference" />
+        <attr name="sceytUiProgressIconTint" format="color" />
+        <attr name="sceytUiProgressRotateAnimEnabled" format="boolean" />
+        <attr name="sceytUiProgressBackgroundColor" format="color" />
+        <attr name="sceytUiProgressIconSizeInPercent" format="float" />
+        <attr name="sceytUiProgressEnableProgressDownAnimation" format="boolean" />
 
     </declare-styleable>
 
-    <declare-styleable name="SceytCustomToolbar">
-        <attr name="title" format="string" />
-        <attr name="titleTextColor" format="color|reference" />
-        <attr name="navigationIcon" format="reference" />
-        <attr name="menuIcon" format="reference" />
-        <attr name="iconsTint" format="color|reference" />
-        <attr name="enableDivider" format="boolean" />
+    <declare-styleable name="SceytToolbar">
+        <attr name="sceytUiToolbarTitle" format="string" />
+        <attr name="sceytUiToolbarTitleTextColor" format="color|reference" />
+        <attr name="sceytUiToolbarNavigationIcon" format="reference" />
+        <attr name="sceytUiToolbarMenuIcon" format="reference" />
+        <attr name="sceytUiToolbarIconsTint" format="color|reference" />
+        <attr name="sceytUiToolbarEnableDivider" format="boolean" />
     </declare-styleable>
 
 </resources>
